--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div id="app">
     <header>
       <h1>
-        <img src="/assets/logo.svg" alt="GitFav">
+        <img src="./assets/logo.svg" alt="GitFav">
       </h1>
       <div class="search">
         <label class="sr-only" for="input-search">Digite o Github username que quer favoritar</label>
